# Blog-API

./: .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.dev.yml  env.example  pyproject.toml
blog/: cache_helpers.py  models.py  serializers.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_remove_comment_author_name_blogpost_author_and_more.py
blog/tests/: conftest.py  test_auth_endpoints.py  test_comments_endpoints.py  test_models.py  test_posts_endpoints.py  test_serializers.py
blog_api/: asgi.py  settings.py  urls.py  wsgi.py
settings/: base.py  dev.py  prod.py  test.py
